--- a/app/views/payments/show.html.erb
+++ b/app/views/payments/show.html.erb
@@ -1,9 +1,9 @@
 <% data = Date.today %>
 <% present = data.strftime("%B").downcase %>
 <% data1 = data - 1.month %>
-<% first = data1.strftime("%B") %>
+<% first = data1.strftime("%B").downcase %>
 <% data2 = data - 2.month %>
-<% previous = data2.strftime("%B") %>
+<% previous = data2.strftime("%B").downcase %>
 
 <h1>Payment Status </h1><br>
 <table class="table table-striped table-bordered">
@@ -15,10 +15,14 @@
 		<th><%= previous %></th>
 	</tr>
 	<% @payments.each do |payment| %>
+
+
 		<tr>
 			<td><%= payment.payment.customer_id %></td>
 			<td><%= payment.payment.customer.first_name%></td>
-			<td><%= payment.payment.january %></td>
+			<td><%= payment.payment.send(present) %></td>
+			<td><%= payment.payment.send(first) %></td>
+			<td><%= payment.payment.send(previous) %></td>
 		</tr>
 	<% end %>
 </table> 
